--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "main": "staging/dwtools/amid/mixin/aFileStorageMixin.s",
   "files": [
-    "staging/dwtools/amid",
+    "staging/dwtools/amid/mixin",
     "production"
   ],
   "scripts": {
